fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 html,body{
   height: 100%;
   width:100%;
+  overflow-x: hidden;
   font-family: 'Poppins',sans-serif;
   color:rgb(31, 30, 30);
   font-size: 2vh;
